--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,24 @@
 	</head>
 
 	<body>
-		<div>
-			<h1><%= link_to '5Floor', root_path %></h1>
+		<nav class="navbar navbar-light bg-faded">
+			<a class="navbar-brand" href="/">5Floor</a>
+			<ul class="nav navbar-nav">
+				<li class="nav-item active">
+					<%= link_to "Menu", menu_path, class: 'nav-link'%>
+				</li>
+				<li class="nav-item">
+					<%= link_to "Contact US", contact_us_path, class: 'nav-link'%>
+				</li>
+			</ul>
+			<form action="/search" class="form-inline pull-xs-right">
+				<input class="form-control" type="text" placeholder="Search">
+				<button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		</nav>
+		
+		<div class="container">
+			<%= yield %>
 		</div>
-		<%= yield %>
 	</body>
 </html>
