--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Welcome#index</h1>
+<h1>Welcome 5th-Floor Restaurant</h1>
 <%= link_to 'Menu', menu_path %>
 <%= link_to 'Contact_us', contact_us_path %>
