contact us pages

--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -1,2 +1,20 @@
-<h1>Welcome#contact_us</h1>
-<p>Find me in app/views/welcome/contact_us.html.erb</p>
+<h1>Contact Us</h1>
+
+<div class="row">
+  <div class="col-sm-4">
+    <address>
+      Hanoi, 144 Xuân Thủy - Cầu Giấy - Hà Nội <br>
+
+      Tel: 84.4.37547.461 <br>
+
+      Fax: 84.4.37547.460 <br>
+
+      Email: uet@vnu.edu.vn <br>
+
+    </address>
+  </div>
+  <div class="col-sm-8">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.856298988368!2d105.78070287885754!3d21.03843508606172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab354920c233%3A0x5d0313a3bfdc4f37!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBDw7RuZyBuZ2jhu4cgxJBIUUcgSMOgIE7hu5lp!5e0!3m2!1svi!2s!4v1476440423186"
+    width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
