--- a/app/views/food_items/_food_item.html.erb
+++ b/app/views/food_items/_food_item.html.erb
@@ -1,7 +1,7 @@
 <div class="card card-inverse">
   <%= image_tag(food_item.image_url, alt: food_item.name, class: 'card-img img-responsive img-thumbnail img-circle') %>
   <div class="card-img-overlay">
-    <h4 class="card-title"><%= food_item.name %></h4>
+    <h4 class="card-title"><%= link_to food_item.name, food_item_path(food_item) %></h4>
     <p class="card-text"><%= food_item.description %></p>
   </div>
   <div>
