--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,19 @@
 		<nav class="navbar navbar-light bg-faded">
 			<a class="navbar-brand" href="/">5Floor</a>
 			<ul class="nav navbar-nav">
-				<li class="nav-item active">
-					<%= link_to "Menu", menu_path, class: 'nav-link'%>
+				<li class="nav-item">
+					<%= link_to "Menu", menu_path, class: "nav-link #{'active' if request.original_fullpath == "/menu" }" %>
 				</li>
 				<li class="nav-item">
-					<%= link_to "Contact US", contact_us_path, class: 'nav-link'%>
+					<%= link_to "Contact US", contact_us_path, class: "nav-link #{'active' if request.original_fullpath == "/contact_us" }"%>
 				</li>
 			</ul>
-			<form action="/search" class="form-inline pull-xs-right">
-				<input class="form-control" type="text" placeholder="Search">
-				<button class="btn btn-outline-success" type="submit">Search</button>
-			</form>
+			<div class="form-inline pull-xs-right">
+				<%= form_tag(food_items_path, method: "get") do %>
+					<%= text_field_tag :search, params[:search], placeholder: "Search for food", class: "form-control" %>
+					<%= submit_tag 'Search', name: nil, class: "btn btn-outline-sucess" %>
+				<% end %>
+			</div>
 		</nav>
 		
 		<div class="container">
