Update features sort

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 			<div class="form-inline pull-xs-right">
 				<%= form_tag(food_items_path, method: "get") do %>
 					<%= text_field_tag :search, params[:search], placeholder: "Search for food", class: "form-control" %>
-					<%= submit_tag 'Search', name: nil, class: "btn btn-outline-sucess" %>
+					<%= submit_tag 'Search', name: nil, class: "btn btn-outline-success" %>
 				<% end %>
 			</div>
 		</nav>
