--- a/app/views/food_items/_food_item.html.erb
+++ b/app/views/food_items/_food_item.html.erb
@@ -1,13 +1,19 @@
 <div class="card card-inverse">
-  <%= image_tag(food_item.image_url, alt: food_item.name, class: 'card-img img-responsive img-thumbnail img-circle') %>
+  <%= image_tag(food_item.image_url_or_default, alt: food_item.name, class: 'card-img img-responsive img-thumbnail img-circle') %>
   <div class="card-img-overlay">
     <h4 class="card-title"><%= link_to food_item.name, food_item_path(food_item) %></h4>
     <p class="card-text"><%= food_item.description %></p>
   </div>
-  <div>
-    <p class="clearfix">0 View</p>
-    <p class="clearfix">0 Comment</p>
-    <p class="clearfix"><%= number_to_currency(food_item.price, unit: 'VND ', format: '%n %u', separator: ',', delimiter: '.')%>
-</p>
-  </div>
+</div>
+<div class="card-footer">
+  <%= form_for OrderItem.new do |f| %>
+    <div class="form-inline">
+      <div class="form-group">
+        <%= f.label :quantity %>
+        <%= f.number_field :quantity, class: 'form-control' %>
+        <%= f.hidden_field :food_item_id, value: food_item.id %>
+      </div>
+      <%= f.submit 'Order', class: 'btn btn-info' %> 
+    </div>       
+  <% end %>
 </div>
