--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,9 @@
-<h1>Welcome 5th-Floor Restaurant</h1>
-<%= link_to 'Menu', menu_path %>
-<%= link_to 'Contact_us', contact_us_path %>
+<div class="jumbotron">
+  <h1 class="display-3">Welcome 5Floor Restaurant</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="m-y-2">
+  <p class="lead text-xs-center">
+    <%= link_to 'Menu', menu_path, class: 'btn btn-primary' %>
+    <%= link_to 'Contact Us', contact_us_path, class: 'btn btn-outline-primary' %>
+  </p>
+</div>
