--- a/app/views/welcome/menu.html.erb
+++ b/app/views/welcome/menu.html.erb
@@ -1,25 +1,29 @@
-<ul class="nav nav-pills">
-  <% Section.all.each do |section| %>
-    <li class="nav-item">
-      <%#pass a param to url menu_path(section: section.name)%>
-      <%= link_to section.name, menu_path(section: section.name), class: "nav-link #{'active' if params[:section] == section.name}" %> 
-    </li>
-  <% end %>
-</ul>
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+    <ul class="nav nav-pills center">
+      <% Section.all.each do |section| %>
+        <li class="nav-item">
+          <%#pass a param to url menu_path(section: section.name)%>
+          <%= link_to section.name, menu_path(section: section.name), class: "nav-link #{'active' if params[:section] == section.name}" %> 
+        </li>
+      <% end %>
+    </ul>
 
-<% if  @food_items.blank? %>
-  <h3>Sorry ! We don't serve it!</h3>
-<% else %>
-  <div class="card card-block">
-    <%= form_tag nil, method: 'get' do %>
-      <%= hidden_field_tag :section, params[:section] %>
-      <div class="form-inline">
-        <%= select_tag :sort_column, options_for_select([['Name', 'name'], ['Price', 'price']]), class: 'form-control' %>
-        <%= select_tag :sort_direction, options_for_select([['Ascending','asc'], ['Descending', 'desc']]), class: 'form-control' %>
-        <%= submit_tag 'Sort', class: 'btn btn-outline-primary' %>
-      </div>
-    <% end %>
+      <% if  @food_items.blank? %>
+        <h3 style="padding-top: 2em;">Sorry ! We don't serve it!</h3>
+      <% else %>
+        <div class="card card-block">
+          <%= form_tag nil, method: 'get' do %>
+            <%= hidden_field_tag :section, params[:section] %>
+            <div class="form-inline center">
+              <%= select_tag :sort_column, options_for_select([['  Name  ', 'name'], ['  Price  ', 'price']]), class: 'form-control' %>
+              <%= select_tag :sort_direction, options_for_select([['Ascending','asc'], ['Descending', 'desc']]), class: 'form-control' %>
+              <%= submit_tag 'Sort', class: 'btn btn-outline-primary' %>
+            </div>
+          <% end %>
+        </div>
+        <%= render @food_items %>
+      <% end %>
   </div>
-
-  <%= render @food_items %>
-<% end %>
+</div>
