--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 				</li>
 			</ul>
 			<div class="form-inline pull-xs-right">
-				<%= form_tag(food_items_path, method: "get") do %>
+				<%= form_tag(food_items_path, method: "get", id: "search-form") do %>
 					<%= text_field_tag :search, params[:search], placeholder: "Search for food", class: "form-control" %>
 					<%= submit_tag 'Search', name: nil, class: "btn btn-outline-success" %>
 				<% end %>
