--- a/app/views/food_items/_food_item.html.erb
+++ b/app/views/food_items/_food_item.html.erb
@@ -1,19 +1,25 @@
-<div class="card card-inverse">
-  <%= image_tag(food_item.image_url_or_default, alt: food_item.name, class: 'card-img img-responsive img-thumbnail img-circle') %>
-  <div class="card-img-overlay">
-    <h4 class="card-title"><%= link_to food_item.name, food_item_path(food_item) %></h4>
-    <p class="card-text"><%= food_item.description %></p>
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+    <div class="card card-inverse">
+    <%= image_tag(food_item.image_url_or_default, alt: food_item.name, class: 'card-img img-responsive img-thumbnail img-circle') %>
+    <div class="card-img-overlay">
+      <h4 class="card-title"><%= link_to food_item.name, food_item_path(food_item) %></h4>
+      <p class="card-text"><%= food_item.description %></p>
+    </div>
+  </div>
+  <div class="card-footer">
+    <%= form_for OrderItem.new do |f| %>
+      <div class="form-inline">
+        <div class="form-group">
+          <%= f.label :quantity %>
+          <%= f.number_field :quantity, class: 'form-control' %>
+          <%= f.hidden_field :food_item_id, value: food_item.id %>
+        </div>
+        <%= f.submit 'Order', class: 'btn btn-info' %> 
+      </div>       
+    <% end %>
+  </div>
   </div>
 </div>
-<div class="card-footer">
-  <%= form_for OrderItem.new do |f| %>
-    <div class="form-inline">
-      <div class="form-group">
-        <%= f.label :quantity %>
-        <%= f.number_field :quantity, class: 'form-control' %>
-        <%= f.hidden_field :food_item_id, value: food_item.id %>
-      </div>
-      <%= f.submit 'Order', class: 'btn btn-info' %> 
-    </div>       
-  <% end %>
-</div>
+  
