--- a/app/views/food_items/index.html.erb
+++ b/app/views/food_items/index.html.erb
@@ -1,35 +1,16 @@
-<h1>Food Item</h1>
-<% if @food_items.count == 0 %>
-	<h2>Have no entry.</h2>
+<p id="notice"><%= notice %></p>
+
+<h1 style="text-align: center;">Food Items</h1>
+<br>
+
+<% if @food_items.blank? %>
+  <h4> Sorry! We don't have this food!</h4>
 <% else %>
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th>#</th>
-				<th>Name</th>
-				<th>Description</th>
-				<th>Price</th>
-				<th>Section</th>
-			</tr>
-		</thead>
-	<tbody>
-		<% @food_items.each do |item| %>
-		<tr>
-			<th scope="row"><%= item.id %></th>
-			<td><%= link_to item.name, food_item_path(item) %></td>
-			<td>
-				<% if item.description == "" %>
-					<p>No Description</p>
-				<% else %>
-					<%= item.description %></td>
-				<% end %>
-			<td><%= number_to_currency(item.price, unit: 'VND ', format: '%n %u', separator: ',', delimiter: '.')%></td>
-			<td><%= Section.find(item.section_id).name %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
-
+  <ul style="list-style-type: none">
+    <% @food_items.each do |food| %>
+      <li>
+        <%= render 'food_item', food_item: food %>
+      </li>
+    <% end %>
+  </ul>
 <% end %>
-
-<%= link_to 'New Food Items', new_food_item_path , class: 'btn btn-outline-primary'%>
